# rustnmap

./: .env.example  .gitattributes  .gitignore  BUG_REPORT_NSE_RESOURCE_LEAK.md  CLAUDE.md  CLAUDE_UPDATE_REPORT.md  COPYING  Cargo.toml  IMPROVEMENT_PLAN.md  LEXOPT_MIGRATION_COMPLETE.md  LICENSE  NOTICE  PROJECT_COMPLETION_REPORT.md  README.md  README.zh.md  RETHINK.md  STATUS.md  TESTING.md  cli_audit_summary.md  findings.md  findings_clippy.md  justfile  phase0_findings.md  progress.md  rust-toolchain.toml  task_plan.md  task_plan_clippy.md  test_plan.md  vuln_client_refactor.md
benchmarks/: CLAUDE.md  CLUADE.md  COMPARISON_PLAN.md  INTEGRATION_TEST_REPORT.md  README.md  api_test.sh  compare_scans.py  comparison_test.py  comparison_test.sh  nse_comparison_test.sh  pyproject.toml  quick_check.sh  rustnmap_test.sh
benchmarks/reports/: .gitkeep
benchmarks/targets/: docker-compose.yml
benchmarks/targets/Dockerfiles/firewall/: Dockerfile
benchmarks/targets/Dockerfiles/ldap/: Dockerfile
benchmarks/targets/Dockerfiles/mail/: Dockerfile
benchmarks/targets/Dockerfiles/scan-target/: Dockerfile
benchmarks/targets/Dockerfiles/sctp-server/: Dockerfile
benchmarks/targets/Dockerfiles/snmp/: Dockerfile
benchmarks/targets/Dockerfiles/ssh/: Dockerfile
benchmarks/targets/Dockerfiles/telnet/: Dockerfile
benchmarks/targets/Dockerfiles/vnc/: Dockerfile  start.sh
benchmarks/targets/Dockerfiles/zombie/: Dockerfile
benchmarks/targets/configs/dns/: named.conf
benchmarks/targets/configs/ftp/: vsftpd.conf
benchmarks/targets/configs/ldap/: init.ldif
benchmarks/targets/configs/mail/: dovecot.conf  users
benchmarks/targets/scripts/: setup.sh  teardown.sh  verify.sh
benchmarks/test_configs/: advanced_scan.toml  basic_scan.toml  multi_target.toml  os_detection.toml  output_formats.toml  service_detection.toml  stealth_extended.toml  timing_tests.toml
crates/rustnmap-api/: CLAUDE.md  Cargo.toml
crates/rustnmap-api/examples/: server.rs
crates/rustnmap-api/src/: config.rs  error.rs  lib.rs  manager.rs  runner.rs  server.rs
crates/rustnmap-api/tests/: integration.rs
crates/rustnmap-benchmarks/: CLAUDE.md  Cargo.toml
crates/rustnmap-benchmarks/benches/: fingerprint_benchmarks.rs  mmap_pps.rs  nse_benchmarks.rs  packet_benchmarks.rs  recvfrom_pps.rs  scan_benchmarks.rs
crates/rustnmap-benchmarks/src/: lib.rs
crates/rustnmap-cli/: CLAUDE.md  Cargo.toml
crates/rustnmap-cli/src/: args.rs  cli.rs  embedded.rs  help.rs  lib.rs  main.rs
crates/rustnmap-cli/tests/: integration_test.rs  output_formatter_test.rs
crates/rustnmap-common/: CLAUDE.md  Cargo.toml
crates/rustnmap-common/src/: error.rs  lib.rs  rate.rs  scan.rs  services.rs  types.rs
crates/rustnmap-core/: CLAUDE.md  Cargo.toml
crates/rustnmap-core/src/: congestion.rs  error.rs  lib.rs  orchestrator.rs  scheduler.rs  session.rs  state.rs
crates/rustnmap-core/tests/: orchestrator_tests.rs  scan_target_test.rs  tcp_scan_test.rs  udp_scan_test.rs
crates/rustnmap-evasion/: CLAUDE.md  Cargo.toml
crates/rustnmap-evasion/src/: config.rs  decoy.rs  fragment.rs  lib.rs  modify.rs  source.rs  timing.rs
crates/rustnmap-evasion/tests/: evasion_integration_tests.rs
crates/rustnmap-fingerprint/: CLAUDE.md  Cargo.toml
crates/rustnmap-fingerprint/src/: error.rs  lib.rs  tls.rs
crates/rustnmap-fingerprint/tests/: database_updater_test.rs  os_detection_integration_tests.rs  os_detection_test.rs  service_detection_integration_tests.rs  service_detection_test.rs  tls_certificate_test.rs
crates/rustnmap-net/: CLAUDE.md  Cargo.toml
crates/rustnmap-net/src/: lib.rs
crates/rustnmap-nse/: CLAUDE.md  Cargo.toml  build.rs
crates/rustnmap-nse/src/: engine.rs  error.rs  lib.rs  lua.rs  process_executor.rs  registry.rs  script.rs  selector.rs  vm.rs
crates/rustnmap-nse/tests/: lua_file_loader_test.rs  nse_integration_tests.rs
crates/rustnmap-output/: CLAUDE.md  Cargo.toml
crates/rustnmap-output/src/: database_context.rs  error.rs  formatter.rs  lib.rs  models.rs  writer.rs  xml_parser.rs
crates/rustnmap-output/tests/: formatter_integration_tests.rs
crates/rustnmap-packet/: CLAUDE.md  Cargo.toml
crates/rustnmap-packet/examples/: debug_libc.rs  debug_mmap.rs  debug_mmap_detailed.rs  debug_no_ownedfd.rs  debug_proc.rs  print_bytes.rs  print_constants.rs  test_mmap.rs  test_recv.rs  test_via_process.rs
crates/rustnmap-packet/src/: async_engine.rs  bpf.rs  engine.rs  error.rs  lib.rs  mmap.rs  recvfrom.rs  stream.rs  zero_copy.rs
crates/rustnmap-packet/tests/: debug_mmap.rs  recvfrom_integration.rs  zero_copy_integration.rs
crates/rustnmap-scan/: CLAUDE.md  Cargo.toml
crates/rustnmap-scan-management/: CLAUDE.md  Cargo.toml
crates/rustnmap-scan-management/src/: database.rs  diff.rs  error.rs  history.rs  lib.rs  models.rs  profile.rs
crates/rustnmap-scan/src/: adaptive_delay.rs  congestion.rs  connect_scan.rs  ftp_bounce_scan.rs  icmp_handler.rs  idle_scan.rs  ip_protocol_scan.rs  lib.rs  packet_adapter.rs  probe.rs  scanner.rs  stealth_scans.rs  syn_scan.rs  timeout.rs  udp_payload.rs  udp_scan.rs  ultrascan.rs
crates/rustnmap-scan/tests/: scan_integration_tests.rs
crates/rustnmap-sdk/: CLAUDE.md  Cargo.toml
crates/rustnmap-sdk/src/: builder.rs  error.rs  lib.rs  models.rs  profile.rs  remote.rs
crates/rustnmap-stateless-scan/: CLAUDE.md  Cargo.toml
crates/rustnmap-stateless-scan/src/: cookie.rs  lib.rs  receiver.rs  sender.rs  stateless.rs
crates/rustnmap-target/: CLAUDE.md  Cargo.toml
crates/rustnmap-target/src/: discovery.rs  dns.rs  lib.rs  parser.rs  spec.rs
crates/rustnmap-target/tests/: discovery_integration_tests.rs  discovery_unit_tests.rs  host_discovery_test.rs
crates/rustnmap-traceroute/: CLAUDE.md  Cargo.toml
crates/rustnmap-traceroute/src/: error.rs  hops.rs  icmp.rs  lib.rs  lib_backup.rs  lib_fixed.rs  probe.rs  tcp.rs  udp.rs
crates/rustnmap-traceroute/tests/: traceroute_integration.rs
crates/rustnmap-vuln/: CLAUDE.md  Cargo.toml
crates/rustnmap-vuln/src/: client.rs  cpe.rs  cve.rs  database.rs  epss.rs  error.rs  kev.rs  lib.rs  models.rs
(+232 files in other folders)
