[workspace]
members = [
    "crates/rustnmap-common",
    "crates/rustnmap-core",
    "crates/rustnmap-net",
    "crates/rustnmap-packet",
    "crates/rustnmap-target",
    "crates/rustnmap-scan",
    "crates/rustnmap-fingerprint",
    "crates/rustnmap-traceroute",
    "crates/rustnmap-evasion",
    "crates/rustnmap-nse",
    "crates/rustnmap-output",
    "crates/rustnmap-cli",
    "crates/rustnmap-benchmarks",
    "crates/rustnmap-vuln",
    "crates/rustnmap-scan-management",
    "crates/rustnmap-stateless-scan",
    "crates/rustnmap-api",
    "crates/rustnmap-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.90"
license = "GPL-3.0-or-later"
authors = ["greatwallisme <greatwallisme@gmail.com>"]
repository = "https://github.com/greatwalllisme/rustnmap"
homepage = "https://github.com/greatwalllisme/rustnmap"
readme = "README.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Networking
pnet = { version = "0.35", features = ["std"] }
pnet_datalink = "0.35"
socket2 = { version = "0.6.2", features = ["all"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.19"

# Regex
regex = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.9"

# DNS resolution
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }

# TLS/SSL detection
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }

# Certificate parsing
x509-parser = "0.18.1"

# Time parsing for certificate validity
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# Cryptographic operations
ring = "0.17"

# HTTP client for database updates
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# CPE parsing
cpe = "0.1"

# LRU cache
lru = "0.12"

# URL parsing
url = "2.5"

# Testing
proptest = "1.5"
criterion = { version = "0.8.2", features = ["html_reports"] }
mockall = "0.14.0"
dotenvy = "0.15"

# Lint configuration
[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Allow multiple crate versions for transitive dependencies (Linux-only project)
multiple_crate_versions = "allow"

# Restriction lints for additional safety
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# Allow string formatting for structured logging compatibility
literal_string_with_formatting_args = "allow"

# Release profile optimized for performance
# Network scanning requires high throughput and low latency
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = 1
panic = "abort"
overflow-checks = true
