[package]
name = "rustnmap-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[dependencies]
rustnmap-common = { path = "../rustnmap-common" }
rustnmap-net = { path = "../rustnmap-net" }
rustnmap-packet = { path = "../rustnmap-packet" }
rustnmap-scan = { path = "../rustnmap-scan" }
rustnmap-target = { path = "../rustnmap-target" }
rustnmap-fingerprint = { path = "../rustnmap-fingerprint" }
rustnmap-nse = { path = "../rustnmap-nse" }
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "scan_benchmarks"
harness = false

[[bench]]
name = "packet_benchmarks"
harness = false

[[bench]]
name = "fingerprint_benchmarks"
harness = false

[[bench]]
name = "nse_benchmarks"
harness = false

[[bench]]
name = "recvfrom_pps"
harness = false
