[package]
name = "rustnmap-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
publish = false

[dependencies]
rustnmap-common = { workspace = true }
rustnmap-net = { workspace = true }
rustnmap-packet = { workspace = true }
rustnmap-scan = { workspace = true }
rustnmap-target = { workspace = true }
rustnmap-fingerprint = { workspace = true }
rustnmap-nse = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "scan_benchmarks"
harness = false

[[bench]]
name = "packet_benchmarks"
harness = false

[[bench]]
name = "fingerprint_benchmarks"
harness = false

[[bench]]
name = "nse_benchmarks"
harness = false

[[bench]]
name = "recvfrom_pps"
harness = false

[[bench]]
name = "mmap_pps"
harness = false
