[package]
name = "rustnmap-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Command-line interface for RustNmap network scanner"
keywords = ["nmap", "network", "scanner", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "rustnmap_cli"
path = "src/lib.rs"

[dependencies]
# CLI dependencies
clap = { version = "4.5", features = ["derive", "wrap_help", "cargo"] }
console = "0.16.2"
indicatif = "0.18.3"
hex = "0.4"
rand = "0.10.0"

# Workspace dependencies
rustnmap-common = { path = "../rustnmap-common" }
rustnmap-core = { path = "../rustnmap-core" }
rustnmap-target = { path = "../rustnmap-target" }
rustnmap-scan = { path = "../rustnmap-scan" }
rustnmap-fingerprint = { path = "../rustnmap-fingerprint" }
rustnmap-nse = { path = "../rustnmap-nse" }
rustnmap-output = { path = "../rustnmap-output" }
rustnmap-evasion = { path = "../rustnmap-evasion" }

# Additional dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "rustnmap"
path = "src/main.rs"
