[package]
name = "rustnmap-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Command-line interface for RustNmap network scanner"
keywords = ["nmap", "network", "scanner", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "rustnmap_cli"
path = "src/lib.rs"

[dependencies]
# CLI dependencies
lexopt = "0.3"
console = "0.16.2"
indicatif = "0.18.3"
hex = "0.4"
rand = "0.10.0"

# Workspace dependencies
rustnmap-common = { workspace = true }
rustnmap-core = { workspace = true }
rustnmap-target = { workspace = true }
rustnmap-scan = { workspace = true }
rustnmap-fingerprint = { workspace = true }
rustnmap-nse = { workspace = true }
rustnmap-output = { workspace = true }
rustnmap-evasion = { workspace = true }
rustnmap-vuln = { workspace = true }
rustnmap-scan-management = { workspace = true }

# Additional dependencies
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shellexpand = "3.1"
dirs = "5.0"

[[bin]]
name = "rustnmap"
path = "src/main.rs"

[features]
diagnostic = ["rustnmap-core/diagnostic"]

[lints]
workspace = true
