[package]
name = "rustnmap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Core scan orchestrator for RustNmap network scanner"
keywords = ["network", "scanning", "security", "nmap", "orchestrator"]
categories = ["network-programming"]

[dependencies]
rustnmap-common = { workspace = true }
rustnmap-net = { workspace = true }
rustnmap-packet = { workspace = true }
rustnmap-target = { workspace = true }
rustnmap-scan = { workspace = true }
rustnmap-fingerprint = { workspace = true }
rustnmap-nse = { workspace = true }
rustnmap-output = { workspace = true }
rustnmap-traceroute = { workspace = true }
rustnmap-evasion = { workspace = true }

async-trait = "0.1"
tokio = { workspace = true }
tokio-stream = "0.1"
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
dashmap = "6.1"
papaya = "0.2"
libc = "0.2"
num_cpus = "1.16"
chrono = "0.4"
futures-util = "0.3"

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"
libc = "0.2"
dotenvy = { workspace = true }

[features]
diagnostic = []

[lints]
workspace = true
