[package]
name = "rustnmap-fingerprint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Service and OS fingerprinting for RustNmap"
readme.workspace = true
keywords = ["nmap", "fingerprinting", "os-detection", "service-detection"]
categories = ["network-programming"]

[dependencies]
# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Regex for pattern matching (use pcre2 for full PCRE support including negative look-arounds)
pcre2 = "0.2.11"

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# System calls for AF_PACKET socket
libc = { workspace = true }

# Network primitives
rustnmap-net = { workspace = true }
rustnmap-packet = { workspace = true }

# Common types
rustnmap-common = { workspace = true }

# TLS/SSL detection
tokio-rustls = { workspace = true }
rustls = { workspace = true }

# Certificate parsing
x509-parser = { workspace = true }

# Time parsing for certificate validity
chrono = { workspace = true }

# Cryptographic operations
ring = { workspace = true }

# HTTP client for database updates
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
test-util = []
