[package]
name = "rustnmap-net"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Network primitives and socket abstractions for RustNmap"
keywords = ["network", "socket", "raw", "packet"]
categories = ["network-programming"]

[dependencies]
rustnmap-common = { workspace = true }
libc = "0.2"
pnet = { workspace = true }
rand = "0.9"
socket2 = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
