[package]
name = "rustnmap-nse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Nmap Script Engine (NSE) implementation for RustNmap - Lua 5.4 script runtime"
keywords = ["nmap", "lua", "scripting", "security", "network"]
categories = ["network-programming", "scripting-language-bindings"]

[dependencies]
# Core dependencies
rustnmap-common = { path = "../rustnmap-common" }
rustnmap-target = { path = "../rustnmap-target" }

# Async runtime
tokio = { workspace = true }

# Lua runtime
mlua = { version = "0.11.6", features = ["lua54", "async", "serialize", "send", "vendored"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Networking
socket2 = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }
regex = { workspace = true }
rand = "0.8"
flate2 = "1.0"
lazy_static = "1.5"

# Cryptography for SSH/SSL libraries
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"

# Cryptography for SMB/NTLM authentication
des = "0.8"
hmac = "0.12"
md4 = "0.10"
ripemd = "0.1"

# Cryptography for SSH packet encryption
aes = { version = "0.9.0-rc.4" }
ctr = { version = "0.10.0-rc.4" }
cipher = "0.5"

# URL encoding/decoding and IDNA
punycode = "0.4"

# Base64 encoding/decoding
base64 = "0.22"

# Process-based execution dependencies
wait-timeout = "0.2"
which = { version = "7.0", default-features = false }

# System calls (for runner binary)
libc = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
mockall = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "rustnmap-nse-runner"
path = "src/bin/runner.rs"

[lints]
workspace = true
