[package]
name = "rustnmap-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Output formatters for RustNmap network scanner"
keywords = ["nmap", "output", "xml", "json", "formatter"]
categories = ["network-programming", "encoding"]

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
# Note: rustnmap-fingerprint was previously a dependency for DatabaseContext,
# but DatabaseContext was unused and has been removed.

# Additional dependencies
chrono = { version = "0.4", features = ["serde", "clock"] }
quick-xml = { version = "0.39.0", features = ["serialize"] }

[dev-dependencies]
# Workspace dependencies
proptest = { workspace = true }
