[package]
name = "rustnmap-packet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Zero-copy packet engine using PACKET_MMAP V3 for RustNmap"
keywords = ["packet", "zero-copy", "mmap", "linux"]
categories = ["network-programming", "os::linux-apis"]

[dependencies]
rustnmap-common = { path = "../rustnmap-common" }
bytes = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
