[package]
name = "rustnmap-packet"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Zero-copy packet engine using PACKET_MMAP V3 for RustNmap"
keywords = ["packet", "zero-copy", "mmap", "linux"]
categories = ["network-programming", "os::linux-apis"]

[dependencies]
rustnmap-common = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
libc = "0.2"
memmap2 = "0.9"
socket2 = "0.5"
thiserror = "2.0"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
log = "0.4"

[lints]
workspace = true
