[package]
name = "rustnmap-scan-management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Scan management for RustNmap (persistence, diff, YAML profiles)"
keywords = ["scan", "management", "sqlite", "diff", "security"]
categories = ["security"]

[dependencies]
# Workspace dependencies
rustnmap-common = { workspace = true }
rustnmap-output = { workspace = true }
rustnmap-vuln = { workspace = true }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
shellexpand = "3.1"

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
dotenvy = { workspace = true }

[lints]
workspace = true
