[package]
name = "rustnmap-scan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Port scanning implementations for RustNmap"
keywords = ["network", "scanning", "port", "security"]
categories = ["network-programming"]

[features]
diagnostic = []

[dependencies]
rustnmap-common = { workspace = true }
rustnmap-net = { workspace = true }
rustnmap-packet = { workspace = true }
rustnmap-target = { workspace = true }
rustnmap-evasion = { workspace = true }
tokio = { workspace = true }
pnet = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"
libc = "0.2"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
