[package]
name = "rustnmap-target"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Target parsing and host discovery for RustNmap"
keywords = ["network", "target", "scanning", "cidr"]
categories = ["network-programming", "parser-implementations"]

[dependencies]
rustnmap-common = { workspace = true }
rustnmap-net = { workspace = true }
tokio = { workspace = true }
trust-dns-resolver = { workspace = true }
libc = "0.2"

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true

